current SVN:

version 0.1.32:

s Update the curl library to version 7.50.1.
* Update to binutils 2.27.
* Update the libssh2 library to version 1.7.0.
* Update to LLVM r277813.
* Update to libedit-20160618-3.1.
* Update to GDB 7.11.1.
* Update the nghttp2 library to version 1.13.0.
* Update the expat library to version 2.2.0.
* Update the curl library to version 7.50.0.
* Update ithe mbedtls library to version 2.3.0.
* Added support for 64 bit LE PowerPC 64.
* Added support for 64 bit MIPS.
* Update to musl 1.1.15.
* Update to LLVM r277269.
* Update to LLVM r276507.
* Update to LLVM r275670.
* Update to LLVM r274974.
* Update to LLVM r274448.
* Update to LLVM r273782.
* Update to LLVM r273077.
* Update to LLVM r272465.
* Update to LLVM r271970.

version 0.1.31:

* Update the curl library to version 7.49.0.
* Removed build of Microblaze libraries.
* Update to LLVM r271112.
* Update the nghttp2 library to version 1.11.0.
* Update to LLVM r270309.
* Update to LLVM r269489.
* Update to QEMU 2.6.0.
* Update the nghttp2 library to version 1.10.0.
* Update to LLVM r268856.
* Update to LLVM r268162.
* Update to LLVM r267083.

version 0.1.30:

* Update the nghttp2 library to version 1.9.2.
* Update the curl library to version 7.48.0.
* Update to LLVM r266470.
* Update to LLVM r265848.
* Update to LLVM r265256.
* Added stdatomic.h.
* Update to LLVM r263883.
* Update the ecclinux kernel version to 4.1.19.

version 0.1.29:

* Update the expat library to version 2.1.1.
* Update to LLVM r263250.
* Renamed aarch64 to arm64v8.
* Made target names more consistant.
* Updated configuration files.
* Update to GDB 7.11.
* Update to musl 1.1.14.
* Update the openldap library to version 2.4.44.
* Update the curl library to version 7.47.1.
* Update the c-ares library to version 1.11.0.
* Added kernel version to 4.5-rc4 to ecclinux. Builds but is not functional.
* Update the ecclinux kernel version to 4.1.18.
* Build lld as part of the ELLCC build.