@@ -1,8 +1,10 @@
 current SVN:
 
+* Enable code coverage with the -coverage option.
+
 version 0.1.32:
 
-s Update the curl library to version 7.50.1.
+* Update the curl library to version 7.50.1.
 * Update to binutils 2.27.
 * Update the libssh2 library to version 1.7.0.
 * Update to LLVM r277813.
